--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.2",
     "nodemon": "^3.0.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
