--- a/package.json
+++ b/package.json
@@ -4,23 +4,32 @@
   "description": "",
   "main": "index.js",
   "directories": {
-    "test": "tests"
+    "tests": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests --bail --reporter mochawesome --reporter-options autoOpen=true,reportDir=test/porocilo,reportFilename=porocilo,json=false",
     "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^5.1.0",
+    "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "http": "0.0.1-security",
+    "jest": "^29.7.0",
+    "mochawesome": "^7.1.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.2",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.0.3",
     "request": "^2.88.2",
+    "supertest": "^6.3.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^10.3.0"
   }
 }
